--- a/default/css/style.css
+++ b/default/css/style.css
@@ -3410,7 +3410,7 @@ textarea.custom  {
  .age-eve-5{
      background-position: -605px -113px;
 }
- .time-hide-11-btn, .time-hide-22-btn, .time-hide-33-btn, .time-hide-44-btn{
+ .time-hide-11-btn, .time-hide-12-btn, .time-hide-13-btn, .time-hide-14-btn,..time-hide-17-btn{
      background-position: -358px -220px;
 }
  .hb-com{
